# code_snippets

./: .gitignore
bugs/: bugs.tex  cpp_bugs.tex  layout.tex  ros_bugs.tex  simulink_dspace_bugs.tex
cpp/: .gitignore  README.md
cpp/cmake/: CMakeLists.txt  README.md
cpp/cmake/lib/MyLib/: CMakeLists.txt  MyLib.h  sqrt.cpp
cpp/cmake/src/: arkanoid.cpp  chapter01.cpp  chapter02.cpp
cpp/cpp_libs/: CMakeLists.txt
cpp/cpp_libs/doc/: Makefile2
cpp/cpp_libs/include/: project_config.h.in
cpp/cpp_libs/src/: a.out  binary_operators.cpp  container_it.cpp  eigen_isnan.cpp  eigen_lib.cpp  eigen_line_dist.cpp  eigen_map.cpp  eigen_quaternion.cpp  eigen_rigid_transformation.cpp  eigen_vector_operations.cpp  gnu_plot_pipe.cpp  gnuplot_test.cpp  libusb_gps.cpp  parallel_loop.cpp  pcl_icp.cpp  pcl_mapping.cpp  pcl_plot.cpp  project_config.h  receive_gps.cpp  socket_can_reader.cpp  socket_can_writer.cpp  socket_udp_recvRawEth.cpp  socket_udp_sendRawEth.cpp
cpp/cpp_read_systemparams/: CMakeLists.txt
cpp/cpp_read_systemparams/cfg/: data.json
cpp/cpp_read_systemparams/doc/: Makefile
cpp/cpp_read_systemparams/src/: read_json.cpp  read_params.cpp
cpp/cpp_sfml_games/: CMakeLists.txt
cpp/cpp_sfml_games/src/: arkanoid.cpp
cpp/cpp_shared_libs/: Readme.md
cpp/cpp_shared_libs/src/: Makefile  main  shared.cpp
cpp/cpp_stdlib_boost/: CMakeLists.txt
cpp/cpp_stdlib_boost/config/: config_read.xml  config_write.xml
cpp/cpp_stdlib_boost/include/: cplusplus_class.cpp  cplusplus_class.hpp  cplusplus_class2.cpp  cplusplus_class2.hpp
cpp/cpp_stdlib_boost/src/: binary_operations.cpp  boost_ptree_kml_gnss_parser.cpp  boost_ptree_read_xml.cpp  container_iterators.cpp  cplusplus_tutorial.cpp  cpp_11.cpp  cpp_chrono.cpp  cpp_containers.cpp  cpp_ptr.cpp  cpp_random_engine.cpp  functors.cpp  rvalue.cpp  std_vec.cpp  test_file.cpp  time_conversions.cpp  ubuntu_system.cpp
cpp/cpp_thread/: CMakeLists.txt
cpp/cpp_thread/src/: create_and_manage.cpp  synchronize.cpp  thread_local_storage.cpp
cpp/cpp_vtk/: CMakeLists.txt
cpp/cpp_vtk/src/: test_vtk.cpp
cpp/gtest/: CMakeLists.txt
cpp/gtest/include/: whattotest.hpp
cpp/gtest/test/: tests.cpp
cpp/hanser_c_und_linux/3.Auflage/: Kapitel8.2.ps  liesmich.html
cpp/hanser_c_und_linux/3.Auflage/XView/: Beispiele.html  XView.html  install.sh  openwin.tgz
cpp/hanser_c_und_linux/Quelltexte/Kapitel1/: Makefile  Makefile2  primz_haupt.c  primz_math.c  primz_math.h  primzahl.c
cpp/hanser_c_und_linux/Quelltexte/Kapitel2/: main.c  primzahl.c  primzahl.h
cpp/hanser_c_und_linux/Quelltexte/Kapitel3/: curses_bsp.c  curses_bsp2.c  primzahl.1  read_args.c  sprache.c  sprache2.c  sprache3.c  sprache3.po
cpp/hanser_c_und_linux/Quelltexte/Kapitel4/: get_dir.c  number.c  (+1 more)
cpp/hanser_c_und_linux/spca5xx/: CHANGELOG  Makefile  README-KERNEL-UPTO-2.6.16  README-SONIX  README-TV8532  RGB-YUV%2fmodule-setting  install  readme
cpp/hanser_c_und_linux/svgalib-1.9.25/: Makefile.cfg
cpp/layouts/: Makefile  class_layout.cpp  class_layout.h  ros_exectuable.cpp
cpp/layouts/template_ros_pkg/: CMakeLists.txt  README.md  package.xml
cpp/ros/: CMakeLists.txt
cpp/ros/src/: covariance.cpp
cpp/udp_and_protobuf/: Communication.docx  Install_protobuf_on_ubuntu.txt  Makefiles_for_windows.txt
cpp/udp_and_protobuf/protobuf_win7_ubuntu/: CMakeLists.txt  CMakeLists2.txt  Makefile  loc.proto  loc_data.proto  opelmsg.proto  prot_read.cpp  prot_write.cpp  recv_proto_udp.c  send_proto_udp.c
cpp/udp_and_protobuf/udp_comm_win7/: Makefile_udp_server  udp_client.c  udp_server.c  udp_server.dev  udp_server.layout
cpp/udp_and_protobuf/udp_proto_comm_win7/: Makefile_udp_proto_win  udp_client.c  udp_proto_win.dev  udp_proto_win.layout  udp_recv_proto_win.c  udp_send_proto_win.c  udp_server.layout
docker/docker_ws/athena_docker/: docker-compose.yml
docker/docker_ws/sh/: docker_03_20.sh
docker/docker_ws/ubuntu_with_python/: Dockerfile  docker-compose.yml  print_hello_world.py
git/: config  exclude  git_commands.txt  git_setting.txt
golang/: README.md
java/: README.md
java/src/: HelloWorld.java
jenkins/: index.html  login_data.txt
notes/: catkin_build_all.txt  git_commands.txt  psql_debug.txt  shell_commands.txt  sql_commands.txt
python/: gpio_from_terminal.txt
python/matplotlib_to_tikz/: Cosinus_1.tex  Sinus_1.tex  bar_chart.py  barplot.tex  fig2tikz.py
python/misc/: 433_us.py  gpio_on_of.py  gpio_on_off.py  mein_test.py  ssh_pi.py  us_sensor.py
python/numerical_derivative_accurarcy/: Numerical_Error_Differentiation.tex  Numerical_Error_Differentiation_cd_0_01.tex  Numerical_Error_Differentiation_cd_0_1.tex  Numerical_Error_Differentiation_cd_10_0.tex  Numerical_Error_Differentiation_cd_1_0.tex  Numerical_Error_Differentiation_fd_0_01.tex  Numerical_Error_Differentiation_fd_0_1.tex  Numerical_Error_Differentiation_fd_10_0.tex  Numerical_Error_Differentiation_fd_1_0.tex  derivative_accuracy.py
python/python_animated_plots/: bar_chart.py  pie_chart.py
python/schuelerpraktika/joshua_neubeck/: mein_programm.py  mein_programm2.py  mein_programm_upgrade.py
python/schuelerpraktika/sascha_mueller/: plot_xml_data.py
python/system_monitor/: monitor_config.py  parse_nvidia_smi.py  print_psutil_info.py  readme.txt  system_monitor_ros.py
python/udemy_bootcamp/: hinweise.txt
ruby/: 01_print_values.rb  02_classes.rb  03_constants.rb  04_read_write_to_files.rb  05_execute_files.rb  06_conditional_operations.rb  07_looping.rb
sh/: .bashrc  install_docker.sh  remove_nasty_chars.sh
shellscript/: branch.sh  clean_docker.sh  deepmap_mapdownload.sh  git_cert.sh  mount_c.sh  mount_mapr.sh
sql/: Readme.md  create_test_csv.py  users.txt
sql/databases/: sample2.sql
sql/udemy_bootcamp/: config.inc.php  faust.sql
sql/udemy_bootcamp/udemy-mysql-course/: index.php
sql/udemy_bootcamp/university.sql/: university.sql
sql/udemy_spatial_sql/: chapter04_queries  chapter05_queries  chapter06_queries.sql  chapter07_queries.sql  qgis_project.qgs
sql/udemy_spatial_sql/sql/: overlay.qgs  sql.qgs  states2.dbf  states2.prj  states2.qpj  states2.shp  states2.shx
(+185 files in other folders)
